--- a/Notebooks/Aula02/Exercicio_Seaborn.ipynb
+++ b/Notebooks/Aula02/Exercicio_Seaborn.ipynb
@@ -29,7 +29,12 @@
     "   Crie um boxplot para analisar a distribuição de variáveis (por exemplo, distribuição de idade por sexo).\n",
     "\n",
     "6. **Mapa de Calor (Heatmap):**\n",
-    "   Crie um mapa de calor para visualizar a correlação entre diferentes variáveis em um conjunto de dados."
+    "   Crie um mapa de calor para visualizar a correlação entre diferentes variáveis em um conjunto de dados.\n",
+    "\n",
+    "5. Crie um gráfico de dispersão para mostrar a relação entre idade e quantidade de crédito (campo \"Age\" vs. \"Credit amount\"), onde as cores representam o sexo e o tamanho dos pontos varia conforme o propósito.\n",
+    "6. Crie um gráfico de linha mostrando a variação da quantidade de crédito em função da duração do crédito, separando por sexo.\n",
+    "7. Crie dois histogramas comparando a distribuição de idades entre masculino e feminino.\n",
+    "8. Como o valor do crédito (\"Credit amount\") se distribui com base no tipo de trabalho (\"Job\") e no sexo (\"Sex\")? Use um gráfico de barras para representar a média do valor de crédito solicitado para cada combinação de \"Job\" e \"Sex\"."
    ]
   }
  ],
